fix: scrollbar removed

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,7 +4,6 @@
 
 html {
   scroll-behavior: smooth;
-  scrollbar-gutter: stable;
 }
 
 body {
